Bug #20653
closedMemory leak in String#start_with? when regexp times out
Description
GitHub PR: https://github.com/ruby/ruby/pull/11247
This commit refactors how Onigmo handles timeout. Instead of raising a timeout error, onig_search will return a ONIGERR_TIMEOUT which the caller can free memory, and then raise a timeout error.
This fixes a memory leak in String#start_with when the regexp times out. For example:
regex = Regexp.new("^#{"(a*)" * 10_000}x$", timeout: 0.000001)
str = "a" * 1000000 + "x"
10.times do
100.times do
str.start_with?(regex)
rescue
end
puts `ps -o rss= -p #{$$}`
end
Before:
After:
Updated by peterzhu2118 (Peter Zhu) about 2 years ago
- Status changed from Open to Closed
Applied in changeset git|7464514ca5e825ada31522b63a33e02d62a0a248.
Fix memory leak in String#start_with? when regexp times out
[Bug #20653]
This commit refactors how Onigmo handles timeout. Instead of raising a
timeout error, onig_search will return a ONIGERR_TIMEOUT which the
caller can free memory, and then raise a timeout error.
This fixes a memory leak in String#start_with when the regexp times out.
For example:
regex = Regexp.new("^#{"(a*)" * 10_000}x$", timeout: 0.000001)
str = "a" * 1000000 + "x"
10.times do
100.times do
str.start_with?(regex)
rescue
end
puts `ps -o rss= -p #{$$}`
end
Before:
After:
Updated by peterzhu2118 (Peter Zhu) about 2 years ago
Ruby 3.3 backport PR: https://github.com/ruby/ruby/pull/11255
Updated by k0kubun (Takashi Kokubun) almost 2 years ago
- Backport changed from 3.1: UNKNOWN, 3.2: WONTFIX, 3.3: REQUIRED to 3.1: UNKNOWN, 3.2: WONTFIX, 3.3: DONE
ruby_3_3 ce565cd4b851977bf37a470bee54e441bb60486d.